kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: E:\DEV\Efrei\M2\Cloud\cloud-project\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: E:\DEV\Efrei\M2\Cloud\cloud-project\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.network/db-network: "true"
        io.kompose.network/redis-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - |
              npm run migration:run
              npm run start
          image: mrmonster0248/node_app:v2
          name: backend
          resources: {}
      restartPolicy: Always
status: {}
