kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: E:\DEV\Efrei\M2\Cloud\cloud-project\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: E:\DEV\Efrei\M2\Cloud\cloud-project\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/redis-network: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --save
            - "60"
            - "1"
            - --loglevel
            - warning
          image: redis:6.2-alpine
          name: redis
          resources: {}
      restartPolicy: Always
status: {}
