kubernetes/backend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: E:\DEV\Efrei\M2\Cloud\cloud-project\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend-tcp
  name: backend-tcp
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 7000
  selector:
    io.kompose.service: backend
  type: LoadBalancer
status:
  loadBalancer: {}
